# angular-bazel

./: .eslintrc.json  .gitignore  BUILD.bazel  README.md  WORKSPACE  angular.json  codelab.md  package-lock.json  package.json  windows-run.md
src/: BUILD.bazel  README.md  angular.json  initialize_testbed.ts  karma.conf.js  package-lock.json  package.json  styles.scss
src/app/: BUILD.bazel  app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
src/src/: index.html
src/src/app/: app.component.html
tools/: karma.bzl  karma.conf.js  ng_module.bzl  ts_lint.bzl  typescript.bzl
