load("//tools:ng_module.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("//tools:karma.bzl", "karma_web_test_suite")
load("//tools:typescript.bzl", "ts_test_project")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "app_styles",
    src = "app.component.scss",
)

ng_module(
    name = "app",
    srcs = glob(
        include = [
            "app.component.ts",
            "app.module.ts",
            "app-routing.module.ts",
        ],
    ),
    angular_assets = [
        "app.component.html",
        ":app_styles"
    ],
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//rxjs",
    ],
)

ts_test_project(
    name = "app_tests",
    srcs = glob([
        "app.component.spec.ts"
    ]),
    deps = [
        ":app",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
    ],
)

karma_web_test_suite(
    name = "test",
    # do not sort
    bootstrap = [
        "@npm//:node_modules/zone.js/dist/zone-testing-bundle.js",
        "@npm//:node_modules/reflect-metadata/Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
    ],
    specs = [
        "//src:initialize_testbed.js",
        ":app_tests",
    ],
    deps = [
        ":app_tests",
        "//src:initialize_testbed",
    ],
)
